...
    <string name="phone_login_get_phone_number_title">Enter Phone Number</string>
    <string name="phone_login_sending_sms_verification_code_on_cool_down">Verification message is still on cool down.</string>

    <!-- Login Set Phone Birthday Dialog -->
    <string name="set_phone_dialog_select_birthday_title">Select Birthday</string>
    <string name="set_phone_dialog_new_device_detected_title">New Device Detected.</string>
    <string name="set_phone_dialog_new_device_detected_body">A new device has been detected attempting to log into an existing account. Would you like to use the existing account or create a new account?</string>
    <string name="set_phone_dialog_new_device_detected_replace">Create New</string>
    <string name="set_phone_dialog_new_device_detected_existing">Use Existing</string>
    <string name="set_phone_dialog_confirmation_title">Confirmation.</string>
    <string name="set_phone_dialog_confirmation_body">This will permanently delete the existing account associated with this phone number. Are you sure?</string>
    <string name="set_phone_dialog_enter_birthday_title">Enter Birthday</string>
    <string name="set_phone_dialog_enter_birthday_invalid_title">Invalid Birthday Was Entered</string>

    <!-- Login SMS verification errors -->
    <string name="sms_verification_verification_code_sent">Verification code sent!</string>
    <string name="sms_verification_new_verification_code">Sending new verification code.</string>
    <string name="sms_verification_codes_do_not_match">Verification code does not match.</string>
    <string name="sms_verification_code_expired">Verification code expired, sending new code.</string>
    <string name="sms_verification_invalid_phone_number_entered">Invalid phone number entered.</string>
    <string name="sms_verification_invalid_verification_code_entered">Invalid verification code entered.</string>
    <string name="sms_verification_connection_error">@string/general_connection_error</string>
    <string name="sms_verification_update_app">Error please update &app_human_name; app.</string>
    <string name="sms_verification_birthday_does_not_match">Entered birthday does match birthday on file.</string>
    <string name="sms_verification_sms_on_cool_down">Send message on cool down for %1$d seconds.</string>
    <string name="sms_verification_button_send_new_code">Send New Verification Code.</string>
    <string name="sms_verification_verification_on_cool_down_error">An error has occurred. Please try verification again later.</string>
...
