<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivityFragments.verifyPhoneNumbersFragment.VerifyPhoneNumbersFragment">

    <TextView
        android:id="@+id/verifyPhoneNumbersTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_verification_get_code_title"
        android:textSize="@dimen/login_edit_text_values_generic_size"
        app:layout_constraintBottom_toTopOf="@+id/verifyNumEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/verifyPhoneNumberProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/verifyPhoneContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPhoneNumberSMSCoolDownTextView" />

    <Button
        android:id="@+id/verifyPhoneContinueButton"
        style="@style/initial_login_button"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendNewCodeButton" />

    <EditText
        android:id="@+id/verifyNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/sms_verification_edit_text_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        android:textSize="@dimen/login_edit_text_values_generic_size"
        app:layout_constraintBottom_toTopOf="@+id/sendNewCodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPhoneNumbersTitleTextView" />

    <Button
        android:id="@+id/sendNewCodeButton"
        style="@style/initial_login_button"
        android:text="@string/sms_verification_button_send_new_code"
        app:layout_constraintBottom_toTopOf="@+id/verifyPhoneContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumEditText" />

    <TextView
        android:id="@+id/verifyPhoneMessagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumEditText" />

    <TextView
        android:id="@+id/verifyPhoneNumberSMSCoolDownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendNewCodeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>