...
            app:destination="@id/loginGetPhoneNumberFragment" />
        <action
            android:id="@+id/action_loginSelectMethodFragment_to_verifyPhoneNumbersFragment"
            app:destination="@id/verifyPhoneNumbersFragment" />
        <action
            android:id="@+id/action_loginSelectMethodFragment_to_loginGetEmailFragment"
            app:destination="@id/loginGetEmailFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginGetPhoneNumberFragment"
        android:name="site.letsgoapp.letsgo.loginActivityFragments.loginGetPhoneNumberFragment.LoginGetPhoneNumberFragment"
        tools:layout="@layout/fragment_login_get_phone_number">
        <action
...
